--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,11 +1,16 @@
-storage: {mythguy1226fightClubLosses: '13', Leo4RealfightClubWins: '1', ThatCraftLifefightClubWins: '1',
-  LostInGalaxeh_fightClubWins: '1', KazutoKirigiafightClubLosses: '7', xDcGamer_MCUfightClubLosses: '10',
-  topleft1: '5', topleft2: '7', topleft3: '0', RozuufightClubLosses: '1', mythguy1226fightClubWins: '7',
-  topmiddle3: '0', topmiddle2: '8', SajiFilmsfightClubWins: '3', bottomleft1: '9',
-  bottomright3: '1', topmiddle1: '5', RozuufightClubWins: '2', xDcGamerfightClubWins: '1',
-  bottomright1: '8', bottomright2: '6', xDcGamer_MCUfightClubWins: '4', TooFluffyfightClubLosses: '3',
-  Leo4RealfightClubLosses: '1', bottomleft2: '8', bottomleft3: '1', septer101fightClubLosses: '1',
-  ThatCraftLifefightClubLosses: '4', TooFluffyfightClubWins: '15', SajiFilmsfightClubLosses: '2',
-  LostInGalaxeh_fightClubLosses: '3', GingastriesfightClubLosses: '1', topright3: '2',
-  topright2: '8', topright1: '7', septer101fightClubWins: '10', bottommiddle1: '9',
-  KazutoKirigiafightClubWins: '1', bottommiddle2: '4', bottommiddle3: '1'}
+storage: {Eobard765ManfightClubLosses: '7', LostInGalaxeh_fightClubWins: '1', KazutoKirigiafightClubLosses: '7',
+  Like_A_Boss382fightClubWins: '2', xSp4rkzfightClubLosses: '2', topmiddle3: '2',
+  topmiddle2: '3', WaggityfightClubLosses: '2', SajiFilmsfightClubWins: '3', Batman_DCUfightClubWins: '2',
+  adambashfightClubWins: '2', WaggityfightClubWins: '2', bottomright3: '3', topmiddle1: '2',
+  RozuufightClubWins: '2', SS_HarleyQuinnfightClubWins: '2', bottomright1: '5', bottomright2: '0',
+  xDcGamer_MCUfightClubWins: '4', Leo4RealfightClubLosses: '1', bottomleft2: '6',
+  bottomleft3: '1', septer101fightClubLosses: '1', ThatCraftLifefightClubLosses: '5',
+  TooFluffyfightClubWins: '16', GingastriesfightClubLosses: '1', God_Doesnt_ExistfightClubLosses: '2',
+  septer101fightClubWins: '10', bottommiddle1: '7', bottommiddle2: '4', bottommiddle3: '1',
+  Batman_DCUfightClubLosses: '1', mythguy1226fightClubLosses: '18', Leo4RealfightClubWins: '1',
+  Eobard765ManfightClubWins: '3', ThatCraftLifefightClubWins: '1', xDcGamer_MCUfightClubLosses: '10',
+  xSp4rkzfightClubWins: '1', topleft1: '3', topleft2: '6', topleft3: '1', RozuufightClubLosses: '1',
+  aldrin524fightClubWins: '14', mythguy1226fightClubWins: '10', adambashfightClubLosses: '6',
+  bottomleft1: '3', aldrin524fightClubLosses: '2', xDcGamerfightClubWins: '1', TooFluffyfightClubLosses: '"3"',
+  SS_HarleyQuinnfightClubLosses: '2', SajiFilmsfightClubLosses: '2', LostInGalaxeh_fightClubLosses: '5',
+  topright3: '1', topright2: '1', topright1: '1', KazutoKirigiafightClubWins: '1'}
