--- a/Magic/data/spells.yml
+++ b/Magic/data/spells.yml
@@ -155,7 +155,7 @@ spshop:
   cast_count: 0
   last_cast: 0
 crucio:
-  cast_count: 0
+  cast_count: 4
   last_cast: 0
 effectshop:
   cast_count: 0
@@ -293,7 +293,7 @@ workbench:
   cast_count: 0
   last_cast: 0
 rictusempra:
-  cast_count: 4
+  cast_count: 26
   last_cast: 0
 enchantwand:
   cast_count: 0
@@ -364,6 +364,9 @@ paste:
 blink:
   cast_count: 2241
   last_cast: 0
+ride:
+  cast_count: 0
+  last_cast: 0
 testspellshop:
   cast_count: 0
   last_cast: 0
@@ -398,7 +401,7 @@ supergather:
   cast_count: 0
   last_cast: 0
 expelliarmus:
-  cast_count: 0
+  cast_count: 1
   last_cast: 0
 polymorph:
   cast_count: 0
