--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8,6 +8,7 @@ groups:
     worlds:
       survival:
         permissions:
+        - ch.alias.forcespeed
         - ch.alias.jump0
         - ch.alias.jump1
         - ch.alias.jump2
@@ -13923,7 +13924,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - ichigokurosaki
+    - kirito
     options:
       name: KazutoKirigia
     permissions: []
@@ -17087,7 +17088,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - vision
+    - mrshifty
     options:
       name: HerpaDerp10000
     permissions:
