--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -6736,6 +6736,8 @@ groups:
         - essentials.build.interact.*
       office:
         permissions:
+        - -worldedit.navigation.unstuck
+        - -betterchairs.use
         - -essentials.build.interact.64:*
         - -essentials.tpahere
         - -essentials.tpaccept
@@ -11316,8 +11318,7 @@ users:
     worlds:
       greenfield:
         permissions: []
-    permissions:
-    - chat.cooldown
+    permissions: []
   6b98b09e-71b1-41c0-a1c9-124f458b2295:
     group:
     - flashbartallen
@@ -15987,7 +15988,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - doctordoom
+    - yoda
     options:
       name: mythguy1226
     permissions:
@@ -17088,7 +17089,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - mrshifty
+    - thehumantorch
     options:
       name: HerpaDerp10000
     permissions:
@@ -17953,7 +17954,7 @@ users:
     - multiverse.access.underworld
   071453cd-9d27-499b-bbf7-1211010cc2cf:
     group:
-    - onepunchman
+    - venom
     options:
       name: undeadmonk3y
     worlds:
@@ -17966,7 +17967,7 @@ users:
       name: LunarPetal
   a8e159ea-deeb-4f73-a246-591b589adcf4:
     group:
-    - kidflashwallywest
+    - reverseflasheobardthawne
 worlds:
   checkers:
     inheritance:
