--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -83,6 +83,7 @@ groups:
         - magic.cast.rictusempra
         - magic.cast.expelliarmus
         - magic.cast.crucio
+        - magic.cast.diffindo
         - magic.use.harryswand2
   piccolo:
     inheritance:
@@ -12913,7 +12914,7 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - supergirl
+    - starbutterfly
     options:
       name: Camulll
     permissions:
@@ -14042,7 +14043,7 @@ users:
       name: _JohnFTW_
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group:
-    - mephisto
+    - apocalypse
     options:
       name: Bubbatruk
     permissions:
@@ -16629,7 +16630,7 @@ users:
       name: AndonPickles
   34b177be-e3f5-4795-8007-bdb9b9a7f41e:
     group:
-    - thehumantorch
+    - speedy
     options:
       name: DrHERO1
   ab873698-78fa-4776-a17b-1a8702d32955:
@@ -18170,7 +18171,7 @@ users:
       name: BassJupiter6469
   2357ee1a-0c09-4375-8412-adfb7595762d:
     group:
-    - beastboy
+    - robin
     options:
       name: Potterkid
   07fb7800-f8ae-4a98-bbe6-7992170a6135:
