--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -4850,6 +4850,9 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
+        - libsdisguises.undisguise
+        - ch.alias.grow
+        - ch.alias.normalsize
   hades:
     inheritance:
     - commonherotraits
