--- a/PerWorldInventory/worlds.yml
+++ b/PerWorldInventory/worlds.yml
@@ -171,6 +171,11 @@ groups:
     worlds:
     - plots
     default-gamemode: CREATIVE
+  office:
+    worlds:
+    - office
+    - utopia
+    default-gamemode: CREATIVE
   pvpworldslobby:
     worlds:
     - pvpworldslobby
