--- a/Essentials/warps/alpha.yml
+++ b/Essentials/warps/alpha.yml
@@ -1,7 +1,7 @@
-world: alpha
-x: -1423.5
-y: 173.0
-z: 2064.5
-yaw: -270.1705
-pitch: 1.2833021
+world: office
+x: 5.5
+y: 1.0
+z: -297.5
+yaw: -270.25336
+pitch: 1.745762
 name: alpha
