--- a/WorldGuard/worlds/alpha/regions.yml
+++ b/WorldGuard/worlds/alpha/regions.yml
@@ -36,7 +36,7 @@ regions:
         priority: 1
     __global__:
         members: {}
-        flags: {use: allow, feed-amount: 1, feed-delay: 1, pvp: deny, mob-spawning: deny}
+        flags: {use: allow, feed-delay: 1, feed-amount: 1, pvp: deny, mob-spawning: deny}
         owners: {}
         type: global
         priority: 0
