--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1411,7 +1411,7 @@ groups:
     - commonherotraits
     options:
       prefix: '&bA&6nn&ba&6beth Ch&ba&6s&be'
-      suffix: '&b'
+      suffix: '&6'
     worlds:
       survival:
         permissions:
@@ -11480,7 +11480,7 @@ users:
       name: TheDoctor1213
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group:
-    - mortal
+    - vision
     options:
       name: Wolfie35
     permissions: []
@@ -11627,7 +11627,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - annabethchase
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -18046,7 +18046,7 @@ users:
       name: LunarPetal
   a8e159ea-deeb-4f73-a246-591b589adcf4:
     group:
-    - mortal
+    - missmartian
     worlds:
       greenfield:
         permissions: []
@@ -18195,7 +18195,7 @@ users:
       name: BassJupiter6469
   2357ee1a-0c09-4375-8412-adfb7595762d:
     group:
-    - mortal
+    - superboykalel
     options:
       name: Potterkid
   07fb7800-f8ae-4a98-bbe6-7992170a6135:
