--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -2387,10 +2387,10 @@ groups:
         - ch.alias.dismountplayer
         - ch.alias.onslaught
         - ch.alias.fly
-        - ch.alias.speed.fly
-        - ch.alias.speed
         - ch.alias.mindcontrol
         - ch.alias.mindlock
+        - ch.alias.speak
+        - essentials.msg
   blackwidow:
     inheritance:
     - commonherotraits
